# dFlow

./: .gitignore  CONFIGURATION.md  HYDRA_README.md  MANIFEST.in  README.md  environment.yml  main.py  models.py  pyproject.toml  requirements.txt  setup.py  train.py
commands/: README.md  evaluation_commands.sh  replication_experiments.sh  run_train.sh  run_train_sample_evaluate.sh  sampling_commands.sh  training_commands.sh
configs/: base.yaml  setup.yaml  vae.yaml
configs/dataset/: cifar10 copy.yaml  cifar10.yaml  cifar100.yaml  custom.yaml  imagenet.yaml  imagenet_512.yaml  imagenet_latent.yaml
configs/launcher/: local.yaml
configs/loss/: combined.yaml  contrastive.yaml  dispersive.yaml  dispersive_default.yaml  dispersive_strong.yaml  huber.yaml  infonce.yaml  l1.yaml  mse.yaml  multi_component.yaml  regularization.yaml  simclr.yaml  vicreg.yaml  vicreg_dispersive.yaml  vicreg_multiscale.yaml
configs/model/: sit_b_2.yaml  sit_b_4.yaml  sit_b_4_mean.yaml  sit_b_8.yaml  sit_l_2.yaml  sit_l_4.yaml  sit_l_8.yaml  sit_s_2.yaml  sit_s_4.yaml  sit_s_8.yaml  sit_xl_2.yaml  sit_xl_4.yaml  sit_xl_8.yaml
configs/models/: sit_b_4.yaml  sit_l_2.yaml  sit_l_8.yaml  sit_s_4.yaml  sit_xl_2.yaml  sit_xl_8.yaml
configs/optimizer/: adamw.yaml
configs/sampling/: ddim.yaml  default.yaml  ode.yaml  sde_default.yaml
configs/scheduler/: cosine.yaml  exponential.yaml  linear_warmup.yaml  plateau.yaml  step.yaml
configs/training/: cifar10.yaml  cifar100.yaml  imagenet_256.yaml  imagenet_512.yaml  standard.yaml
configs/transport/: gvp.yaml  linear.yaml  vp.yaml
configs/vae/: ema.yaml  mse.yaml
dflow/: __init__.py  configs.py  hydra_trainer.py  sampling.py  trainer.py  trainer_hydra.py  trainer_original.py
dflow/losses/: __init__.py  combined_loss.py  contrastive_loss.py  dispersive_loss.py  regularization_losses.py  vicreg_loss.py
dflow/models/: __init__.py  sit.py  sit_mean.py
dflow/scripts/: __init__.py  sample.py  train.py
dflow/trainer/: trainer.py
dflow/transport/: __init__.py  path.py  transport.py  transport_utils.py
dflow/utils/: __init__.py  data_utils.py  dataset.py  hydra.py  trainer_utils.py  trainer_utils.py.bak  transforms.py  wandb_utils.py
examples/: config_examples.py  dataset_examples.py  modular_examples.py  train_examples.py  vicreg_examples.py
scripts/: ddp_ping.py  main.py
scripts/evaluation/: evaluate_hydra.py  evaluate_meanflow.py
scripts/sampling/: sample_ddp.py  sample_hydra.py
scripts/training/: train_hydra.py
